--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
       <p class="description">A passionate web developer dedicated to building responsive, user-friendly, and impactful full-stack applications.</p>
       <br>
       <br>
-      <a href="./JAVAS PRACRICE/Dheeraj's_resume.pdf" class="btn" download>Download Resume</a>
+      <a href="./JAVAS PRACRICE/dheerajresume.pdf" class="btn" download>Download Resume</a>
       <p></p>
     </div>
   </header>
